--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "@reach/visually-hidden": "0.15.2",
     "@rehooks/document-title": "1.0.2",
     "@segment/analytics-next": "1.31.1",
-    "@sentry/react": "6.15.0",
-    "@sentry/tracing": "6.15.0",
+    "@sentry/react": "6.16.1",
+    "@sentry/tracing": "6.16.1",
     "@stacks/blockchain-api-client": "0.65.0",
     "@stacks/common": "2.0.1",
     "@stacks/connect": "6.4.0",
@@ -148,6 +148,7 @@
     "@babel/runtime": "7.16.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@schemastore/web-manifest": "0.0.5",
+    "@sentry/webpack-plugin": "1.18.3",
     "@stacks/auth": "2.0.0-beta.1",
     "@stacks/connect-react": "12.0.0",
     "@stacks/eslint-config": "1.0.10",
